make commnt form more pronounce with darker outline

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -245,9 +245,9 @@
   margin-left: 8px;
   height: 32px;
   width: 278px;
-  border-top: 1px solid #dddfe2;
-  border-left: 1px solid #dddfe2;
-  border-bottom: 1px solid #dddfe2;
+  border-top: 1px solid #61676f;
+  border-left: 1px solid #61676f;
+  border-bottom: 1px solid #61676f;
   border-top-left-radius: 32px;
   border-bottom-left-radius: 32px;
   font-size: 14px;
@@ -257,9 +257,9 @@
 
 .post-comment-form button {
   padding: 0;
-  border: 1px solid #dddfe2;
+  border: 1px solid #61676f;
   background-color: #ffffff;
-  color: #afb3b7;
+  color: #61676f;
   height: 34px;
   width: 124px;
   border-top-right-radius: 32px;
