--- a/frontend/components/app.css
+++ b/frontend/components/app.css
@@ -31,10 +31,16 @@ ul {
   justify-content: space-between;
 }
 
+.app-first-child {
+  width: 100%;
+}
+
 .main {
-  display: flex;
+  display: inline-flex;
   justify-content: space-around;
   background-color: #e9ebee;
+  width: 100%;
+  min-height: 500px;
 }
 
 .news-feed {
@@ -103,7 +109,6 @@ ul {
 
 #main-front-left {
   width: 500px;
-  margin: 40px;
   color: #333;
 }
 
@@ -116,7 +121,6 @@ ul {
   display: flex;
   align-items: center;
   font-size: 12px;
-  margin: 40px 0;
 }
 
 #main-front-left h3 {
