--- a/frontend/components/app.css
+++ b/frontend/components/app.css
@@ -10,6 +10,7 @@ input {
 button {
   border-radius: 0;
   border-width: 0px;
+  cursor: pointer;
 }
 
 img {
@@ -20,6 +21,10 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .app {
@@ -44,32 +49,6 @@ ul {
 #main-show {
   display: flex;
   background-color: #e9ebee;
-}
-
-#logo {
-  background-color: white;
-  color: #3b5998;
-  height: 25px;
-  width: 28px;
-  font-size: 28px;
-  font-weight: bold;
-  border-radius: 2px;
-}
-
-#header-left-logged-in button {
-  height: 25px;
-  width: 45px;
-  border: none;
-  vertical-align: middle;
-  background-color: #e9eaed;
-  font-size: 15px;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  cursor: pointer;
-}
-
-.fa-search {
-  color: #4b4f56;
 }
 
 #main-front-left {
