--- a/frontend/components/header/header.css
+++ b/frontend/components/header/header.css
@@ -1,45 +1,64 @@
 .header {
   display: flex;
   justify-content: center;
+  min-height: 42px;
+  color: white;
+  width: 100%;
+}
+
+.header-logged-out {
   background-color: #3b5998;
   background-image: linear-gradient(#4e69a2, #3b5998 50%);
   border-bottom: 1px solid #133783;
-  min-height: 42px;
 }
 
 .header-logged-out-div {
   display: flex;
   justify-content: space-between;
   min-width: 960px;
-  height: 82px
+  height: 82px;
 }
 
+.header-logged-in {
+  background-color: #4267b2;
+  border-bottom: 1px solid #29487d;
+  position: fixed;
+  z-index: 2;
+}
+
+.header-logged-in-div {
+  display: flex;
+  justify-content: space-between;
+  min-width: 1012px;
+}
+
+
 .header h1 {
-  color: white;
   margin: 25px 0 10px 0;
   font-family: arial;
   font-size: 42px;
 }
 
-#header-main-logged-in {
-  display: flex;
-  justify-content: space-around;
-  background-color: #4267b2;
-  border-bottom: 1px solid #29487d;
-  color: #fff;
-  min-height: 42px;
-  position: fixed;
-  z-index: 2;
-  width: 100%;
-}
 
-#header-left-logged-in {
+.header-logged-in-div-left {
   display: flex;
   align-items: center;
-  margin-left: 40px;
   height: 42px;
 }
 
-#header-left-logged-in a {
-  text-decoration: none;
+.header-logo {
+  background-color: #fff;
+  color: #4267b2;
+  height: 24px;
+  width: 24px;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 2px;
+  position: relative;
+}
+
+.header-logo span {
+  position: absolute;
+  bottom: 0;
+  height: 22px;
 }
