--- a/frontend/components/header/search_bar/search_bar.css
+++ b/frontend/components/header/search_bar/search_bar.css
@@ -1,10 +1,27 @@
-#search-bar {
-  height: 23px;
-  width: 400px;
-  margin-left: 10px;
-  padding-right: 5px;
+.search-bar {
+  display: flex;
+  align-items: center;
+  height: 42px;
+  font-size: 14px;
+}
+
+.search-bar-input {
+  height: 24px;
+  width: 392px;
   border: none;
+  margin-left: 7px;
+  padding: 0 7px;
   color: #1d2129;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+.search-bar-button {
+  height: 24px;
+  width: 42px;
+  border: none;
+  color: #586070;
+  background-color: #f6f6f8;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
 }
